--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./assets/style/main.css">
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam aperiam beatae minus officiis nemo? Neque ipsa, eligendi officiis incidunt fuga maxime, consectetur laboriosam expedita sapiente unde suscipit quod doloremque a.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam aperiam <mark>ISOBEK</mark> beatae minus officiis nemo? Neque ipsa, eligendi officiis incidunt fuga maxime, consectetur laboriosam expedita sapiente unde suscipit quod doloremque a.</p>
 </body>
 </html>
